# 2048-Rust-AI

./: .gitignore  README.md
main/: Cargo.toml
main/networks/: main copy.ntwk  main.ntwk  main2.ntwk  test.ntwk
main/src/: fastgame.rs  flame-graph.html  game.rs  lib.rs  main.rs  mcts.rs  minimax.rs  neural_network.rs  population.rs  renderer.rs
